wrapped header + fixed DM bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ height:100vh;
 #header .logo h1 {
   font-size: 24px;
   margin: 0;
-  padding: 10px 0;
+  padding: 16px 0;
   line-height: 1;
   font-weight: 700;
   letter-spacing: 3px;
