--- a/assets/css/style0.css
+++ b/assets/css/style0.css
@@ -13,7 +13,7 @@
   border-width: 4px;
 position: fixed;
 width: 100%;
-  z-index: 99998;
+  z-index: 997;
   margin-top: 80px;
 
 }
